--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-  height: 100vh;
-  background-color: #e4a600;
+  font-family: 'Cabin', sans-serif;
+}
+
+header {
+  height: 60vh;
+  background-color: #272e64;
+  font-size: 4rem;
+  color: #f8bd42;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h2 {
+  text-decoration: underline;
+  font-size: larger;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main {
+  background-color: #f8bd42;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  max-width: 50%;
 }
