--- a/styles.css
+++ b/styles.css
@@ -46,12 +46,17 @@ main {
 }
 
 /*specific styles for taking stock*/
+
+body {
+  background-color: white;
+}
 .taking_stock_header {
   color: #0076ba;
   background-color: white;
   font-family: 'PoplarStd';
   font-size: 1rem;
   padding: 1rem;
+  margin-top: 1.5rem;
   display: flex;
   justify-content: space-between;
 }
@@ -84,15 +89,15 @@ main {
   filter: brightness(80%);
 }
 .text-container {
-  position: relative;
   height: 20%;
   display: flex;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin-left: 2rem;
-  margin-top: 10%;
+  margin-top: 10rem;
+  z-index: 1;
 }
 
 .img_gallery {
@@ -109,9 +114,21 @@ h2 {
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
   margin-left: 1rem;
+  max-width: 100%;
 }
 .caption {
   margin-left: 1rem;
+}
+
+footer {
+  height: 5vh;
+  background-color: #0076ba;
+  color: white;
+  margin-top: 1rem;
+}
+
+footer p {
+  padding: 0.5rem;
 }
 @media only screen and (max-width: 600px) {
   body {
