--- a/styles/main.css
+++ b/styles/main.css
@@ -8,61 +8,84 @@
   padding: 0;
 }
 
+html {
+  background-color: #f8bd42;
+}
+
 header {
   background-color: #272e64;
-  font-size: 4rem;
-  padding: 3rem;
   color: #f8bd42;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 1.3rem;
+  text-align: center;
+  padding: 2rem;
 }
 
-h2 {
+h1 {
   text-decoration: underline;
-  font-size: larger;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-main {
-  background-color: #f8bd42;
- 
 }
 
 .flex-container {
-  max-width: 50%;
   display: flex;
-  padding: 3rem;
+  flex-direction: column;
+  max-width: 80%;
   margin: 0 auto;
-  align-items: center;
-}
-
-.logo{
+  margin-top: 2rem;
 }
 
 .copy {
   padding: 1rem;
   line-height: 1.5rem;
-
 }
-@media only screen and (max-width: 600px) {
+.iframe-container {
+  margin-top: 1rem;
+}
+
+img {
+  margin-top: -2em;
+}
+
+@media only screen and (min-width: 768px) {
   header {
-    font-size: 1rem;
-    padding-bottom: 4rem;
+    font-size: 4rem;
+    padding: 4rem;
   }
-  main {
+
+  .header-container {
+    display: flex;
     flex-direction: column;
   }
-  img {
-    max-width: 80%;
+  .flex-container {
+    width: 80%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
   }
 
-  .text {
-    margin-top: 2rem;
-    font-size: 0.8rem;
+  .copy {
+    margin-top: 5rem;
+    font-size: 2rem;
+    line-height: 2.5rem;
     text-align: center;
-    margin-left: 0;
+  }
+  .iframe-container {
+    margin-top: 5rem;
+    height: 50vh;
+    width: 50vw;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    resize: both;
+    overflow: auto;
   }
 
+  img {
+    width: 70%;
+    margin-top: -7rem;
+  }
+
+  .contact {
+    margin-top: -7rem;
+    font-size: 2rem;
+  }
+}
