--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,7 @@ html {
 
 header {
   background-color: #272e64;
+  width: 100%;
   color: #f8bd42;
   font-size: 1.3rem;
   text-align: center;
@@ -25,25 +26,30 @@ h1 {
 }
 
 .flex-container {
-  display: flex;
-  flex-direction: column;
   max-width: 80%;
+  margin: 0 auto;
+  margin-top: 2rem;
+  padding: 1rem;
+}
+
+.copy {
+  line-height: 1.5rem;
+  margin: 0 auto;
+}
+.iframe-container {
   margin: 0 auto;
   margin-top: 2rem;
 }
 
-.copy {
-  padding: 1rem;
-  line-height: 1.5rem;
-}
-.iframe-container {
-  margin-top: 1rem;
-}
-
 img {
-  margin-top: -2em;
+  display: block;
+  height: 30vh;
+  margin: 0 auto;
 }
 
+.contact {
+  font-size: 1rem;
+}
 @media only screen and (min-width: 768px) {
   header {
     font-size: 4rem;
@@ -55,10 +61,8 @@ img {
     flex-direction: column;
   }
   .flex-container {
-    width: 80%;
+    max-width: 70%;
     margin: 0 auto;
-    justify-content: center;
-    align-items: center;
   }
 
   .copy {
@@ -66,26 +70,23 @@ img {
     font-size: 2rem;
     line-height: 2.5rem;
     text-align: center;
+    max-width: 80%;
   }
   .iframe-container {
-    margin-top: 5rem;
-    height: 50vh;
-    width: 50vw;
+    display: flex;
+    justify-content: center;
   }
   iframe {
-    width: 100%;
-    height: 100%;
-    resize: both;
-    overflow: auto;
+    width: 755px;
+    height: 424px;
+    max-width: 100%;
+    max-height: calc((100vw - 40px) / (16 / 9));
   }
-
   img {
-    width: 70%;
-    margin-top: -7rem;
+    height: 40vh;
   }
 
   .contact {
-    margin-top: -7rem;
     font-size: 2rem;
   }
 }
