--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,9 @@ html {
   background-color: #f8bd42;
 }
 
+a:visited {
+  color: black;
+}
 header {
   background-color: #272e64;
   width: 100%;
@@ -50,6 +53,10 @@ img {
 .contact {
   font-size: 1rem;
 }
+
+.contact a {
+  text-decoration: none;
+}
 @media only screen and (min-width: 768px) {
   header {
     font-size: 4rem;
@@ -72,6 +79,7 @@ img {
     text-align: center;
     max-width: 80%;
   }
+
   .iframe-container {
     display: flex;
     justify-content: center;
@@ -88,5 +96,6 @@ img {
 
   .contact {
     font-size: 2rem;
+    text-align: center;
   }
 }
