testing font conversion;

--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -1,6 +1,10 @@
 @font-face {
-  src: url('./fonts/PoplarStd.otf') format('opentype');
-  font-family: 'PoplarStd';
+  font-family: 'Poplar Std';
+  src: url('PoplarStd.woff2') format('woff2'),
+    url('PoplarStd.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
