--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -124,6 +124,7 @@ footer {
 
 footer p {
   margin-left: 1vw;
+  font-size: 2rem;
 }
 
 @media only screen and (max-width: 600px) {
@@ -142,6 +143,6 @@ footer p {
     margin: 0.3rem;
   }
   footer p {
-    margin-left: 3vw;
+    font-size: 1rem;
   }
 }
