--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -146,3 +146,9 @@ footer p {
     font-size: 1rem;
   }
 }
+
+@media only screen and (min-width: 900px) {
+  .img_gallery {
+    max-width: 50%;
+  }
+}
