reducing size of hero image - Taking Stock

--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -44,7 +44,7 @@ html {
   position: absolute;
   top: 0;
   left: 0;
-  background-image: url('/images/hero.jpeg');
+  background-image: url('/images/hero_adobespark.webp');
   height: 100%;
   width: 100%;
   background-size: cover;
