--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,6 @@ h1 {
 .flex-container {
   max-width: 80%;
   margin: 0 auto;
-  margin-top: 1.5rem;
   padding: 1rem;
 }
 
@@ -62,11 +61,25 @@ img {
   text-align: center;
 }
 
-.contact a {
+a {
+  color: inherit;
   text-decoration: none;
 }
-.contact a:visited {
-  color: black;
+
+.ts-logo {
+  max-width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+
+.ts-logo a {
+  color: #0076ba;
+  font-family: 'PoplarStd', 'Inter', sans-serif;
+  font-size: 2rem;
+}
+
+span {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 768px) {
@@ -81,7 +94,7 @@ img {
   }
 
   .copy {
-    margin-top: 5rem;
+    margin-top: 4rem;
     font-size: 2rem;
     line-height: 2.5rem;
     text-align: center;
@@ -97,6 +110,10 @@ img {
     height: 424px;
     max-width: 100%;
     max-height: calc((100vw - 40px) / (16 / 9));
+  }
+
+  .ts-logo a {
+    font-size: 7rem;
   }
   img {
     height: 40vh;
