--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap');
 
+@font-face {
+  font-family: 'Poplar Std';
+  src: url('PoplarStd.woff2') format('woff2'),
+    url('PoplarStd.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -113,6 +124,7 @@ span {
   }
 
   .ts-logo a {
+    font-family: 'PoplarStd', 'Inter', sans-serif;
     font-size: 7rem;
   }
   img {
