--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap');
 
 @font-face {
-  font-family: 'Poplar Std';
-  src: url('PoplarStd.woff2') format('woff2'),
-    url('PoplarStd.woff') format('woff');
-  font-weight: 900;
+  font-family: 'Poplar-Std-Black';
+  src: url('Poplar-Std-Black.woff') format('woff'),
+    url('Poplar-Std-Black.woff2') format('woff2'), url('Poplar-Std-Black.eot'),
+    url('Poplar-Std-Black.eot?#iefix') format('embedded-opentype'),
+    url('Poplar-Std-Black.ttf') format('truetype');
+
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -83,7 +86,8 @@ a {
 
 .ts-logo a {
   color: #0076ba;
-  font-family: 'PoplarStd', 'Inter', sans-serif;
+  font-family: 'Poplar-Std-Black';
+
   font-size: 2rem;
 }
 
