--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -19,7 +19,7 @@ html {
 
 .taking_stock_header {
   color: #0076ba;
-  font-family: 'Poplar-Std-Black', 'Inter';
+  font-family: 'PoplarStd', 'Inter', sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
