--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,7 @@ a {
 
 .ts-logo a {
   color: #0076ba;
-  font-family: 'Poplar-Std-Black', 'Inter';
+  font-family: 'Poplar-Std-Black', 'Inter', sans-serif;
   font-size: 2rem;
 }
 
