--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;700&display=swap');
 
 @font-face {
-  font-family: 'Poplar Std';
-  src: url('PoplarStd.woff2') format('woff2'),
-    url('PoplarStd.woff') format('woff');
+  font-family: 'Poplar Std-Black';
+  src: url('PoplarStd-Black.woff2') format('woff2'),
+    url('PoplarStd-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -83,7 +83,7 @@ a {
 
 .ts-logo a {
   color: #0076ba;
-  font-family: 'PoplarStd', 'Inter', sans-serif;
+  font-family: 'PoplarStd-Black', 'Inter', sans-serif;
   font-size: 2rem;
 }
 
