--- a/styles/main.css
+++ b/styles/main.css
@@ -85,6 +85,7 @@ a {
   color: #0076ba;
   font-family: 'PoplarStd-Black', 'Inter', sans-serif;
   font-size: 2rem;
+  font-weight: 900;
 }
 
 span {
