--- a/styles/main.css
+++ b/styles/main.css
@@ -83,7 +83,7 @@ a {
 
 .ts-logo a {
   color: #0076ba;
-  font-family: 'PoplarStd-Black', 'Inter', sans-serif;
+  font-family: 'PoplarStd', 'Inter', sans-serif;
   font-size: 2rem;
   font-weight: 900;
 }
