--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,6 @@ img {
   display: block;
   height: 30vh;
   margin: 0 auto;
-  margin-bottom: 1rem;
 }
 
 .contact {
@@ -82,6 +81,7 @@ span {
 
 .ts-logo {
   height: 10vh;
+  margin-top: -1.5rem;
 }
 
 @media only screen and (min-width: 768px) {
