--- a/styles/taking_stock.css
+++ b/styles/taking_stock.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: 'Poplar Std-Black';
-  src: url('PoplarStd-Black.woff2') format('woff2'),
-    url('PoplarStd-Black.woff') format('woff');
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
 html {
@@ -24,13 +14,15 @@ html {
   align-items: center;
 }
 
-.taking_stock_header h1 {
-  font-size: 8vh;
+.taking_stock_header img {
+  height: 15vh;
+  margin-left: -2rem;
 }
 
 .icon img {
   height: 8vh;
   margin-right: 0.5vw;
+  margin-left: auto;
   cursor: pointer;
 }
 
